--- a/css/responsive.css
+++ b/css/responsive.css
@@ -76,10 +76,12 @@
     height: auto;
   }
 }
-
+/****Bonus****/
 @media only screen and (max-width: 700px) {
   #navbar {
     display: none;
-    /*visibility: hidden;*/
+  }
+  #navbar nav a.menu-icon {
+    display: inline;
   }
 }
