--- a/css/responsive.css
+++ b/css/responsive.css
@@ -78,10 +78,10 @@
 }
 /****Bonus****/
 @media only screen and (max-width: 700px) {
-  #navbar {
+  /*#navbar {
     display: none;
-  }
+  }*/
   #navbar nav a.menu-icon {
-    display: block;
+    display:
   }
 }
