--- a/css/responsive.css
+++ b/css/responsive.css
@@ -78,14 +78,14 @@
 }
 /****Bonus****/
 @media only screen and (max-width: 700px) {
-  /*#navbar {
-    display: none;
-  }*/
+  #navbar {
+    visibility: hidden;
+  }
   #navbar nav a.menu-icon {
     display: block;
   }
 
   #logo h2 {
-    display: none;
+
   }
 }
