--- a/css/responsive.css
+++ b/css/responsive.css
@@ -78,9 +78,10 @@
 }
 /****Bonus****/
 @media only screen and (max-width: 700px) {
-  #navbar {
+  /*#navbar {
     visibility: hidden;
-  }
+  }*/
+
   a.menu-icon {
     display: block;
   }
