--- a/css/responsive.css
+++ b/css/responsive.css
@@ -78,9 +78,9 @@
 }
 /****Bonus****/
 @media only screen and (max-width: 700px) {
-  /*#navbar {
+  #navbar {
     visibility: hidden;
-  }*/
+  }
 
   #navbar nav a.menu-icon {
     display: block;
