--- a/css/responsive.css
+++ b/css/responsive.css
@@ -82,7 +82,7 @@
     visibility: hidden;
   }
 
-  #navbar nav a.menu-icon {
+  #navbar nav a {
     display: block;
     visibility: visible;
   }
