--- a/css/responsive.css
+++ b/css/responsive.css
@@ -79,7 +79,8 @@
 /****Bonus****/
 @media only screen and (max-width: 700px) {
   nav {
-    visibility: hidden;
+    /*visibility: hidden;*/
+    display: none;
   }
 
   #navbar nav a.menu-icon {
