--- a/css/responsive.css
+++ b/css/responsive.css
@@ -78,7 +78,7 @@
 }
 /****Bonus****/
 @media only screen and (max-width: 700px) {
-  nav {
+  #navbar nav a {
     /*visibility: hidden;*/
     display: none;
   }
