--- a/css/responsive.css
+++ b/css/responsive.css
@@ -80,6 +80,7 @@
 @media only screen and (max-width: 700px) {
   #navbar nav a {
     display: none;
+    float: right;
   }
 
   #navbar nav a.menu-icon {
