Automatically backed up by Learn

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -80,7 +80,8 @@
 @media only screen and (max-width: 700px) {
   #navbar nav a {
     display: none;
-    /*float: right;*/
+    float: right;
+    font-size: 1.5em;
   }
 
   #navbar nav a.menu-icon {
