--- a/css/responsive.css
+++ b/css/responsive.css
@@ -80,7 +80,7 @@
 @media only screen and (max-width: 700px) {
   #navbar nav a {
     display: none;
-    /*font-size: 1.5em;*/
+    font-size: 1.5em;
     padding: 10px 20px;
   }
 
